--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -162,9 +162,9 @@ $('.masterTooltip').hover(function(){
                             
                             <div class="post-bg-row">
                             <ul class="field-list">
-                            <!-- <li><label>Address</label> 
-                              <%= f.text_field :address,"maxlength"=>"40", :class => "small" %>
-                            </li> -->
+                            <li><label>Address
+                             <span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
+                            </label></li>
                             <li><label>Street address</label> 
                               <%= f.text_field :address,"maxlength"=>"30", :class => "small" %>
                             </li>
