--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -73,7 +73,7 @@
           <div class="booking-col1"> 
             <p>
               <span>Booked drop-off</span> 
-              <label class="tasks-list-item">
+              <label class="tasks-list-item1">
                 <% if post.drop_off == true %> 
                   <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
                 <% else %>
@@ -84,7 +84,7 @@
             </p>
             <p>
               <span>Booked Pick-up</span> 
-              <label class="tasks-list-item">
+              <label class="tasks-list-item1">
                 <% if post.pick_up == true %>
                   <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
                 <% else %>
