--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -27,7 +27,12 @@
         
             
 
-                 <div class="name-title"> <%= post.user_name.capitalize rescue nil%> <%= post.user_last_name[0,1] rescue nil %>  
+                 <div class="name-title"> 
+                  <% if current_user.id != post.user_id %>
+                    <%= post.user_name.capitalize rescue nil %> <%= post.user_last_name[0,1] rescue nil %> 
+                  <% else %>
+                    <span>&nbsp;</span>
+                  <% end %>
           <span style="font-size:10px; color:#999;"> 
             <% if current_user.provider.present? &&  post.user_provider.present? && post.user_id != current_user.id %>(<%= mutual_friend_list(post.user.id) rescue nil%> mutual friends)
             <% end %>
