--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
                   	<div class="input-group">
                   		<form id="form" onsubmit="return validateForm()">
 
-                         	<%= text_field_tag :email, nil, :class=>"sign_up_id", :placeholder=>"@usd.edu email address" %>
+                         	<%= text_field_tag :email, nil, :class=>"sign_up_id", :placeholder=>"@usc.edu email address" %>
 	                         <span class="input-group-btn">
 	                             <%= submit_tag "Sign Up", :class=>"btn_signup", :style=>"margin:-78px 0px 0px 601px;" %>
 	                             <div class="form-error" style="margin-left: 414px;"></div>
