--- a/app/views/payement_transfers/_result_payment.html.erb
+++ b/app/views/payement_transfers/_result_payment.html.erb
@@ -3,15 +3,17 @@
 <td><%= index + 1 %></td>
 <td><%= booking.id %></td>
 <td><%= booking.area rescue nil %></td>
-<td>$<%= booking.cut_off_price rescue nil %></td>
-<td>$<%= booking.price rescue nil %></td>
-<td>$<%= booking.commission %></td>
+<td>$<%= booking.cut_off_price.present? ? booking.cut_off_price : ' --' rescue nil %></td>
+<td>$<%= booking.price.present? ? booking.price : ' --' rescue nil %></td>
+<td>$<%= booking.commission.present?  ? booking.commission : ' --' rescue nil %></td>
 <td><%= booking.post.address rescue nil%></td>
 <td><%= booking.status.camelize rescue nil %>
   
 <td>
   <% if booking.is_cancel == true %>
-      <span>Cancelled</span>
+      Cancelled
+      <span style="font-size:8px;"><%= booking.comment %></span>
+      
   <% else %>
   <% unless booking.stripe_transfer_id.present? %>  
   <%= link_to "Money Transfer",transfer_money_payement_transfers_path(:booking_id =>booking.id,:poster_id =>booking.poster_id,:finder_id=>booking.user_id) rescue nil%>
