--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-
+<%# content_for :scripts do %>
+<%= javascript_include_tag  "jquery-1.5.2.min","jquery.validate.min","validation"  %>
+<%# end %>
 
   <div class="boxpop-up-login">
 
