--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -6,8 +6,7 @@
 
 <title>Dinobo</title>
 <%= stylesheet_link_tag  'style', "components", "component","facebox.css", media: 'all'%>
-<%= javascript_include_tag "application"%>
-
+<%= javascript_include_tag "application", "facebox.js" %>
 <%= csrf_meta_tags %>  
 </head>
 
@@ -131,10 +130,8 @@
 </script>       
                 
   
-  <script type="text/javascript">
-    // jQuery.noConflict(true);
-  </script>
-  <%= javascript_include_tag "typer","facebox" %>
+  
+  <%= javascript_include_tag "typer" %>
   
   <script>
   jQuery(function () { 
