--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -6,7 +6,7 @@
 
 <title>Dinobo</title>
 <%= stylesheet_link_tag  'style', "components", "component","facebox.css", media: 'all'%>
-<%= javascript_include_tag "application", "facebox.js" %>
+<%= javascript_include_tag "application","jquery-1.7.0.min", "facebox.js","typer" %>
 <%= csrf_meta_tags %>  
 </head>
 
@@ -131,7 +131,7 @@
                 
   
   
-  <%= javascript_include_tag "typer" %>
+  <%#= javascript_include_tag "typer" %>
   
   <script>
   jQuery(function () { 
