--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%# content_for :scripts do %>
-<%#= javascript_include_tag  "jquery-1.7.0.min","jquery.validate.min","validation","facebox" %>
+<%= javascript_include_tag  "jquery.validate.min","validation" %>
 <%# end %>
 
   <div class="boxpop-up-login">
