--- a/app/views/payement_transfers/search_payments.pdf.erb
+++ b/app/views/payement_transfers/search_payments.pdf.erb
@@ -2,39 +2,34 @@
 <table class="table table-striped">
 <tr>
   <th>Sr No.</th>
-  <th>Booking ID</th>
-  <th>Booking Date</th>
-  <th>Booking Area/Sq.Ft</th>
-  <th>Payment Received by Poster</th>
-  <th>Payment Done by Finder</th>
-  <th>Commission</th>
-  <th>Poster Name</th>
-  <th>Finder Name</th>
-  <th>Address</th>
-  <th>Transfer Status</th>
-  <th>Money Transfer</th>
+  <th>Amount finder was charged</th>
+  <th>Stripe commission for charge</th>
+  <th>Actual (net) we received</th>
+  <th>Total amount we paid</th>
+  <th>Stripe commission for payout</th>
+  <th>Net amount user received</th>
+  <th>Stripe's addition/subtraction</th>
+  <th>Actual amount user received as refund</th>
+  <th>Our final income</th>
+  
 </tr>
 <% @payment_transfers.try(:each_with_index) do |booking, index|%>
+   
 <tr>
-
-<td><%= index + 1 %></td>
-<td><%= booking.created_at.to_date %></td>
-<td><%= booking.area %></td>
-<td>$<%= booking.cut_off_price.to_i rescue nil %></td>
-<td>$<%= booking.price.to_i rescue nil %></td>
-<td>$<%= booking.commission.to_i %></td>
-<td><%= booking.poster.name %></td>
-<td><%= booking.post.address %></td>
-
- <td><%= booking.dropoff_date.strftime("%d-%m-%Y")%> </td>
-
- <td><%= booking.pickup_date.strftime("%d-%m-%Y") %></td>
-
-  
-<td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
-<td><%= booking.status.camelize rescue nil %>
-  
+  <td><%= index + 1 %></td>
+  <td><%= booking.price.present? ? booking.price : ' --' rescue nil  %></td>
+  <td><%= stripe_charge = booking.price.to_i * 0.029 + 0.30 rescue nil %></td>
+  <td><%= booking.price - stripe_charge  rescue nil %></td>
+  <td><%= booking.cut_off_price + 0.25 rescue nil %></td>
+  <td>0.25</td>
+  <td><%= booking.cut_off_price rescue nil %></td>
+  <td><%= ((booking.refund_finder * 2.9)/100) rescue nil %>
+  <td><%= booking.refund_finder rescue nil %>
+  <td><%= booking.commission rescue nil %>
 
 </tr>
-<%end%> 
+<% end %>
 </table>
+
+
+
