--- a/app/views/posts/overview.html.erb
+++ b/app/views/posts/overview.html.erb
@@ -430,7 +430,8 @@ window.onload = loadMap;
 
 
         
-     <p class="para sortby active" style="font-size:10px;">Sort by : <%= sortable "price_sq_ft", "Price" %> / <%= sortable "distance" %> / Mutual Friends</p> 
+     <p class="para sortby active" style="font-size:10px;">Sort by : <%= sortable "price_sq_ft", "Price" %> / 
+      <%= sortable "distance" %> / Mutual Friends</p> 
 
      
        
