Database yml file updated

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -131,7 +131,7 @@
 
                           </li>
                           <%unless current_user.admin?%>
-                          <% if @booking.dropoff_date >= Date.today + 1 %>
+                          <% if @booking.dropoff_date + 1 >= Date.today %>
                             <%= link_to "Confirm drop-off ", drop_off_bookings_path(:booking_id => @booking.id ), :remote=>true, :class=>"cdo" %> 
                           <% end %>
                           
