--- a/app/views/payement_transfers/index.html.erb
+++ b/app/views/payement_transfers/index.html.erb
@@ -1,4 +1,10 @@
 <%= render 'selectdate' %>
+
+<div  style="text-align:right;margin-left:10px;">
+      <a href="<%= payement_transfers_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a> 
+      <a href="<%= payement_transfers_path(params.merge(format: "pdf"))  %>" class="btn btn-secondary" target="_blank"><i class="icon"><img src="/assets/pdf.png" alt=""></i> PDF</a><br><br>
+</div>
+
 <table class="table table-striped">
 <tr>
 <th>Sr No.</th>
