Stripe popup inssue

--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -21,7 +21,7 @@
                        <% end %>
                      
                     </div>
-                    <div class="circle"><p>$<%= post.price_sq_ft.to_i %></p></div>
+                    <div class="circle"><p>$<%= post.price_sq_ft %></p></div>
                   </div>
         
         
