--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -67,7 +67,7 @@
               <span>Booking area</span> : <%= @a.present? ? @a.inject{|sum,x| sum + x } : 0 %>sq. ft
             </p>
             <p>
-              <span>Price/sq. ft</span> : $<%= post.price_sq_ft.to_i %>
+              <span>Price/sq. ft</span> : $<%= post.price_sq_ft %>
             </p>
           </div>
           <div class="booking-col1"> 
@@ -105,6 +105,7 @@
           </div>        
         </div>
       <% end %>
+      <%= will_paginate @posts %>
     </div>
   </div>
 </div>
