--- a/app/views/order_receives/index.html.erb
+++ b/app/views/order_receives/index.html.erb
@@ -133,8 +133,11 @@
             
           </p>
         </div>
+
+
       </div>
       <%end%>
+         <%= will_paginate @bookings %>
     </div>
   </div>
 </div>
