pagination on booking page

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -160,6 +160,7 @@
                         </div>
                   <%end%> 
                       
+                  <%= will_paginate @bookings %>
                 </div>
             </div>
         </div>
